--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "envFileX",
   "description": "VSCode 插件，支持在 launch.json 中配置环境变量文件并执行自定义脚本",
   "version": "0.1.0",
-  "publisher": "envFileX",
+  "publisher": "JayYe",
   "repository": {
     "type": "git",
     "url": "https://github.com/yezhoujie/envFileX-vscode"
